# MigraineTackler

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  PROD_WORKLIST.md  README.md  alembic.ini  market-research-migraine-diary-tracking-apps-2026-04-30.md  migrate_add_home_city.py  migrate_schema.py  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.streamlit/: secrets.toml.example
agents/: 00_orchestrator.md  01_intake_agent.md  02_pattern_agent.md  03_research_agent.md  04_root_cause_agent.md  05_protocol_agent.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py
app/: config.py  database.py
app/api/: deps.py  main.py  schemas.py
app/api/routes/: analyze.py  auth.py  dev.py  knowledge.py  logs.py  profile.py  shortcut.py
app/core/: security.py
app/graph/: graph.py  state.py
app/graph/nodes/: intake.py  lifestyle_audit.py  pattern.py  preventive_care.py  protocol.py  research.py  root_cause.py  schemas.py
app/mcp_server/: auth_middleware.py  server.py
app/models/: knowledge_chunk.py  log_entry.py  user.py  user_profile.py
app/rules/: rules_engine.py
app/services/: email.py  guideline_seeder.py  log_service.py  rag_service.py  weather_service.py
architecture/: context_builder.md
components/time_picker/: __init__.py  index.html
tests/: conftest.py  test_api.py  test_intake.py
