[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "migrainetackler"
version = "0.1.0"
description = "Personal migraine tracking and root cause analysis system"
requires-python = ">=3.11"
dependencies = [
    # LLM + agent framework
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langsmith>=0.2.0",
    # UI
    "streamlit>=1.40.0",
    # Database
    "sqlmodel>=0.0.21",
    # Config + env
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # HTTP + scheduling
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    # API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Auth
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
