[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "migrainetackler"
version = "0.1.0"
description = "Personal migraine tracking and root cause analysis system"
requires-python = ">=3.11"
dependencies = [
    # LLM + agent framework
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langsmith>=0.2.0",
    # Database driver (PostgreSQL)
    "psycopg[binary]>=3.1.0",
    # UI
    "streamlit>=1.40.0",
    # Database
    "sqlmodel>=0.0.21",
    # Config + env
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # HTTP + scheduling
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    # API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Auth
    "pyjwt>=2.8.0",
    # Vector DB + PDF
    "pgvector>=0.3.0",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
    # MCP server
    "mcp>=1.2.0",
    "slowapi>=0.1.10",
    # Schema migrations
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pydantic[mypy]>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes — unused imports, undefined names
    "I",   # isort
    "UP",  # pyupgrade — modernize syntax
    "B",   # flake8-bugbear — common bugs (bare except, mutable defaults)
    "S",   # bandit security rules
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",   # allow assert in tests
    "S105",   # allow string literals that look like passwords (env var names)
    "S106",
    "B008",   # FastAPI Depends() in function defaults is intentional DI pattern
    "E501",   # long lines in prompt strings are intentional — don't wrap LLM prompts
    "RUF001", # EN dash in prompt strings is intentional copy — not a code character
    "RUF002", # EN dash in docstrings is intentional copy
    "RUF003", # EN dash in comments is intentional copy
    "E402",   # config.py imports os after settings init intentionally
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
"app/graph/nodes/research.py" = ["S314"]      # XML from trusted PubMed/NIH API
"app/services/guideline_seeder.py" = ["S314"] # XML from trusted PubMed/NIH API
"app/services/rag_service.py" = ["S608"]      # vec_str is computed floats, not user input

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # LangChain/LangGraph stubs are incomplete
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]
exclude = ["^alembic"]          # Alembic-generated files; alembic stubs are incomplete

[tool.pydantic-mypy]
init_forbid_extra = true
warn_untyped_fields = true
